--- a/axthe/package.json
+++ b/axthe/package.json
@@ -1,7 +1,7 @@
 {
   "name": "axthe",
   "version": "0.0.5",
-  "description": "<i>AXTHE tech stack is An opinionated HElper for eXpress.js Templating</i>",
+  "description": "AXTHE tech stack is An opinionated eXpress.js and Templating HElper for high productivity webapp development",
   "homepage": "http://docs.axthe.net",
   "repository": {
     "type": "git",
