--- a/docs/starter/package.json
+++ b/docs/starter/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "site",
+  "name": "mywebapp",
   "private": true,
   "scripts": {
     "start": "npx nodemon"
   },
   "dependencies": {
-    "axthe": "^0.0.8"
+    "axthe": "^0.0.10"
+  }, 
+  "devDependencies": {
+    "tape": "^5.2.2"
   }
 }
