--- a/axtheLib/package.json
+++ b/axtheLib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axthe",
-  "version": "0.0.10",
+  "version": "0.0.14",
   "description": "AXthe tech stack is An opinionated eXpress.js and Templating HElper for high productivity webapp development",
   "homepage": "http://docs.axthe.net",
   "repository": {
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
+    "js-yaml": "^4.1.0",
     "make-fetch-happen": "^8.0.14",
     "multer": "^1.4.2",
     "node-cache": "^5.1.2",
@@ -22,8 +23,8 @@
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
-    "logzio-nodejs": "^2.0.2",
     "algoliasearch": "^4.9.1",
+    "logzio-nodejs": "^2.0.2",
     "puppeteer": "^9.1.1",
     "tape": "^5.2.2"
   }
