--- a/docs/starter/.gitignore
+++ b/docs/starter/.gitignore
@@ -1,13 +1,9 @@
 .DS_Store
 
+# VS Code 
 *.code-workspace
 .vscode
-
-# VS Code development container setup
 .devcontainer/
-
-# SonarQube ( https://www.sonarqube.org/ ) analysis report
-.scannerwork/
 
 node_modules
 
@@ -21,5 +17,4 @@ coverage/
 
 prepros.config
 
-###
-ubay
+*.html
