--- a/axtheLib/package.json
+++ b/axtheLib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axthe",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "AXthe tech stack is An opinionated eXpress.js and Templating HElper for high productivity webapp development",
   "homepage": "http://docs.axthe.net",
   "repository": {
@@ -20,12 +20,12 @@
     "node-cache": "^5.1.2",
     "pug": "^3.0.2",
     "serve-favicon": "^2.5.0",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "puppeteer": "^9.1.1"
   },
   "devDependencies": {
     "algoliasearch": "^4.9.1",
     "logzio-nodejs": "^2.0.2",
-    "puppeteer": "^9.1.1",
     "tape": "^5.2.2"
   }
 }
