--- a/axtheLib/package.json
+++ b/axtheLib/package.json
@@ -26,6 +26,12 @@
   "devDependencies": {
     "algoliasearch": "^4.9.1",
     "logzio-nodejs": "^2.0.2",
-    "tape": "^5.2.2"
+
+    "tape": "^5.2.2",
+    "uuid": "^8.3.2",
+    "faucet": "^0.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "ably": "^1.2.10",
+    "permit": "^0.2.4"
   }
 }
