--- a/docs/starter/package.json
+++ b/docs/starter/package.json
@@ -2,12 +2,14 @@
   "name": "mywebapp",
   "private": true,
   "scripts": {
-    "start": "npx nodemon"
+    "start": "npx nodemon",
+    "test": "tape 'tests/**/*.test.js' | faucet"
   },
   "dependencies": {
     "axthe": "^0.0.14"
   }, 
   "devDependencies": {
-    "tape": "^5.2.2"
+    "tape": "^5.2.2",
+    "faucet": "^0.0.1"
   }
 }
