--- a/axtheLib/package.json
+++ b/axtheLib/package.json
@@ -15,23 +15,22 @@
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
     "js-yaml": "^4.1.0",
+    "livereload": "^0.9.3",
     "make-fetch-happen": "^8.0.14",
     "multer": "^1.4.2",
     "node-cache": "^5.1.2",
     "pug": "^3.0.2",
+    "puppeteer": "^9.1.1",
     "serve-favicon": "^2.5.0",
-    "validate.js": "^0.13.1",
-    "puppeteer": "^9.1.1"
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
-    "algoliasearch": "^4.9.1",
-    "logzio-nodejs": "^2.0.2",
-
-    "tape": "^5.2.2",
-    "uuid": "^8.3.2",
+    "ably": "^1.2.10",
     "faucet": "^0.0.1",
     "jsonwebtoken": "^8.5.1",
-    "ably": "^1.2.10",
-    "permit": "^0.2.4"
+    "logzio-nodejs": "^2.0.2",
+    "permit": "^0.2.4",
+    "tape": "^5.2.2",
+    "uuid": "^8.3.2"
   }
 }
