--- a/axtheLib/package.json
+++ b/axtheLib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axthe",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "description": "AXthe tech stack is An opinionated eXpress.js and Templating HElper for high productivity webapp development",
   "homepage": "http://docs.axthe.net",
   "repository": {
@@ -9,10 +9,11 @@
   },
   "license": "Apache",
   "dependencies": {
-    "@supabase/supabase-js": "^1.11.17",
+    "@supabase/supabase-js": "^1.12.0",
     "cheerio": "^1.0.0-rc.9",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
     "http-errors": "^1.8.0",
     "js-yaml": "^4.1.0",
     "livereload": "^0.9.3",
@@ -20,9 +21,10 @@
     "multer": "^1.4.2",
     "node-cache": "^5.1.2",
     "pug": "^3.0.2",
-    "puppeteer": "^9.1.1",
+    "puppeteer": "^10.0.0",
     "serve-favicon": "^2.5.0",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "ably": "^1.2.10",
@@ -30,7 +32,6 @@
     "jsonwebtoken": "^8.5.1",
     "logzio-nodejs": "^2.0.2",
     "permit": "^0.2.4",
-    "tape": "^5.2.2",
-    "uuid": "^8.3.2"
+    "tape": "^5.2.2"
   }
 }
