--- a/axtheLib/package.json
+++ b/axtheLib/package.json
@@ -24,7 +24,8 @@
     "puppeteer": "^10.0.0",
     "serve-favicon": "^2.5.0",
     "uuid": "^8.3.2",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+	"airtable": "^0.11.1"
 },
   "devDependencies": {
     "jsdom": "^16.6.0",
