--- a/docs/starter/package.json
+++ b/docs/starter/package.json
@@ -2,14 +2,15 @@
   "name": "mywebapp",
   "private": true,
   "scripts": {
-    "start": "npx nodemon",
-    "test": "npx tape 'tests/**/*.test.js' | faucet"
+	"start": "npx nodemon",
+	"test": "npx tape 'tests/**/*.test.js' | faucet"
   },
   "dependencies": {
-    "axthe": "^0.0.20"
+	"axthe": "^0.0.20"
   }, 
   "devDependencies": {
-    "tape": "^5.2.2",
-    "faucet": "^0.0.1"
+	"tape": "^5.2.2",
+	"faucet": "^0.0.1",
+	"prettier": "^2.2.1"
   }
 }
