--- a/axtheLib/package.json
+++ b/axtheLib/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.13.2",
     "airtable": "^0.11.1",
+    "bcryptjs": "^2.4.3",
     "better-sqlite3": "^7.4.1",
     "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "^1.4.5",
@@ -29,10 +30,14 @@
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
+    "ably": "^1.2.10",
+    "express-session": "^1.17.2",
+    "ip": "^1.1.5",
     "jsdom": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "logzio-nodejs": "^2.0.2",
-    "permit": "^0.2.4",
+    "socket.io": "^4.1.2",
+    "systeminformation": "^5.7.5",
     "tape": "^5.2.2"
   }
 }
