--- a/docs/starter/package.json
+++ b/docs/starter/package.json
@@ -2,15 +2,19 @@
   "name": "mywebapp",
   "private": true,
   "scripts": {
-	"start": "npx nodemon",
-	"test": "npx tape 'tests/**/*.test.js' | faucet"
+    "watchNode": "npx nodemon",
+	"watchSass": "sass --watch public/assets",
+    "test": "npx tape 'tests/**/*.test.js' | faucet"
   },
   "dependencies": {
-	"axthe": "^0.0.23"
-  }, 
+    "axthe": "^0.0.23"
+  },
   "devDependencies": {
-	"tape": "^5.2.2",
+    "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.34.1",
 	"faucet": "^0.0.1",
-	"prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "tape": "^5.2.2"
   }
 }
