--- a/zdev/package.json
+++ b/zdev/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "axthe": "file:../axtheLib",
-    "livereload": "^0.9.3"
+    "livereload": "^0.9.3",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "twilio": "^3.63.1"
