--- a/axtheLib/package.json
+++ b/axtheLib/package.json
@@ -1,46 +1,47 @@
 {
   "name": "axthe",
-  "version": "0.0.26",
+  "version": "0.0.27",
   "description": "AXthe tech stack is An opinionated eXpress.js and Templating HElper for high productivity webapp development",
   "homepage": "http://docs.axthe.net",
   "repository": {
-	"type": "git",
-	"url": "http://github.com/axthe/axthe"
+    "type": "git",
+    "url": "http://github.com/axthe/axthe"
   },
   "license": "Apache",
   "dependencies": {
-	"@supabase/supabase-js": "^1.15.1",
-	"airtable": "^0.11.1",
-	"bcryptjs": "^2.4.3",
-	"better-sqlite3": "^7.4.1",
-	"cheerio": "^1.0.0-rc.10",
-	"cookie-parser": "^1.4.5",
-	"express": "^4.17.1",
-	"fs-extra": "^10.0.0",
-	"http-errors": "^1.8.0",
-	"js-yaml": "^4.1.0",
-	"livereload": "^0.9.3",
-	"make-fetch-happen": "^9.0.3",
-	"node-cache": "^5.1.2",
-	"pug": "^3.0.2",
-	"puppeteer": "^10.0.0",
-	"serve-favicon": "^2.5.0",
-	"uuid": "^8.3.2",
-	"validate.js": "^0.13.1"
+    "@supabase/supabase-js": "^1.15.1",
+    "airtable": "^0.11.1",
+    "bcryptjs": "^2.4.3",
+    "better-sqlite3": "^7.4.1",
+    "cheerio": "^1.0.0-rc.10",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
+    "http-errors": "^1.8.0",
+    "js-yaml": "^4.1.0",
+    "livereload": "^0.9.3",
+    "make-fetch-happen": "^9.0.3",
+    "morgan": "^1.10.0",
+    "node-cache": "^5.1.2",
+    "pug": "^3.0.2",
+    "puppeteer": "^10.0.0",
+    "serve-favicon": "^2.5.0",
+    "uuid": "^8.3.2",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
-	"multer": "^1.4.2",
-	"ably": "^1.2.10",
-	"express-session": "^1.17.2",
-	"ip": "^1.1.5",
-	"jsdom": "^16.6.0",
-	"jsonwebtoken": "^8.5.1",
-	"legit": "^1.0.9",
-	"logzio-nodejs": "^2.0.2",
-	"reload": "^3.2.0",
-	"socket.io": "^4.1.2",
-	"systeminformation": "^5.7.7",
-	"tape": "^5.2.2"
+    "ably": "^1.2.10",
+    "express-session": "^1.17.2",
+    "ip": "^1.1.5",
+    "jsdom": "^16.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "legit": "^1.0.9",
+    "logzio-nodejs": "^2.0.2",
+    "multer": "^1.4.2",
+    "reload": "^3.2.0",
+    "socket.io": "^4.1.2",
+    "systeminformation": "^5.7.7",
+    "tape": "^5.2.2"
   },
   "//": "comment: reload"
 }
