--- a/axtheLib/package.json
+++ b/axtheLib/package.json
@@ -14,16 +14,18 @@
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^7.4.1",
     "cheerio": "^1.0.0-rc.10",
+    "chokidar": "^3.5.2",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "express-interceptor": "^1.2.0",
     "fs-extra": "^10.0.0",
-    "http-errors": "^1.8.0",
     "js-yaml": "^4.1.0",
     "make-fetch-happen": "^9.0.3",
     "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
     "pug": "^3.0.2",
     "puppeteer": "^10.0.0",
+    "reload": "^3.2.0",
     "serve-favicon": "^2.5.0",
     "uuid": "^8.3.2",
     "validate.js": "^0.13.1"
@@ -32,15 +34,13 @@
     "ably": "^1.2.10",
     "express-session": "^1.17.2",
     "ip": "^1.1.5",
-    "jsdom": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "legit": "^1.0.9",
     "logzio-nodejs": "^2.0.2",
     "multer": "^1.4.2",
-    "reload": "^3.2.0",
     "socket.io": "^4.1.2",
     "systeminformation": "^5.7.7",
     "tape": "^5.2.2"
   },
-  "//": "comment: reload"
+  "//": "comments:"
 }
