--- a/axtheLib/package.json
+++ b/axtheLib/package.json
@@ -28,10 +28,13 @@
     "puppeteer": "^10.0.0",
     "serve-favicon": "^2.5.0",
     "uuid": "^8.3.2",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+	"sass": "^1.35.1"
+
   },
   "devDependencies": {
-    "express-session": "^1.17.2",
+    "prettier": "^2.3.1",
+	"express-session": "^1.17.2",
     "ip": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
     "legit": "^1.0.9",
