--- a/axtheLib/package.json
+++ b/axtheLib/package.json
@@ -20,26 +20,26 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-interceptor": "^1.2.0",
+    "filehound": "^1.17.4",
     "fs-extra": "^10.0.0",
     "make-fetch-happen": "^9.0.3",
     "morgan": "^1.10.0",
     "node-cache": "^5.1.2",
     "pug": "^3.0.2",
     "puppeteer": "^10.0.0",
+    "sass": "^1.35.1",
     "serve-favicon": "^2.5.0",
     "uuid": "^8.3.2",
-    "validate.js": "^0.13.1",
-	"sass": "^1.35.1"
-
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
-    "prettier": "^2.3.1",
-	"express-session": "^1.17.2",
+    "express-session": "^1.17.2",
     "ip": "^1.1.5",
     "jsonwebtoken": "^8.5.1",
     "legit": "^1.0.9",
     "logzio-nodejs": "^2.0.2",
     "multer": "^1.4.2",
+    "prettier": "^2.3.1",
     "socket.io": "^4.1.2",
     "systeminformation": "^5.7.7",
     "tape": "^5.2.2"
