--- a/my2CORSApp/package.json
+++ b/my2CORSApp/package.json
@@ -10,13 +10,20 @@
     "node": ">=14.17.1",
     "npm": ">=7.18.1"
   },
+  "dependencies": {
+	"axthe": "0.0.33"
+  },
   "devDependencies": {
     "@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
     "@snowpack/plugin-run-script": "^2.3.0",
     "prettier": "^2.3.1",
     "snowpack": "^3.6.1",
-    "typescript": "^4.3.4"
-},
-  "dependencies": {
+    "typescript": "^4.3.4",
+    "cordova-plugin-whitelist": "^1.3.4"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {}
+    }
   }
 }
