--- a/my2CORSApp/package.json
+++ b/my2CORSApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "npx snowpack build",
+    "dev": "npx snowpack dev",
     "build": "npx snowpack build"
   },
   "engines": {
@@ -11,7 +11,7 @@
     "npm": ">=7.18.1"
   },
   "dependencies": {
-	"axthe": "0.0.33"
+	"axthe": "0.1.1"
   },
   "devDependencies": {
     "@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
