--- a/my1SSRapp/package.json
+++ b/my1SSRapp/package.json
@@ -11,7 +11,8 @@
     "npm": ">=7.18.1"
   },
   "dependencies": {
-    "axthe": "^0.1.1"
+    "axthe": "^0.1.4",
+	"multer": "^1.4.2"
   },
   "devDependencies": {
     "faucet": "^0.0.1",
