--- a/my2CORSApp/package.json
+++ b/my2CORSApp/package.json
@@ -11,13 +11,13 @@
     "npm": ">=7.18.1"
   },
   "dependencies": {
-	"axthe": "0.1.1"
   },
   "devDependencies": {
-    "@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
+	"axthe": "0.1.4",
+	"@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
     "@snowpack/plugin-run-script": "^2.3.0",
-    "prettier": "^2.3.1",
-    "snowpack": "^3.6.1",
+    "prettier": "^2.3.2",
+    "snowpack": "^3.6.2",
     "typescript": "^4.3.4",
     "cordova-plugin-whitelist": "^1.3.4"
   },
