--- a/my2CORSApp/package.json
+++ b/my2CORSApp/package.json
@@ -7,19 +7,19 @@
     "build": "npx snowpack build"
   },
   "engines": {
-    "node": ">=14.17.1",
-    "npm": ">=7.18.1"
+    "node": ">=14.17.0",
+    "npm": ">=7.18.0"
   },
   "dependencies": {
+    "@epandco/snowpack-riot-plugin": "^1.0.0"
   },
   "devDependencies": {
-	"axthe": "0.1.4",
-	"@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
+    "@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
     "@snowpack/plugin-run-script": "^2.3.0",
+    "axthe": "0.1.4",
+    "cordova-plugin-whitelist": "^1.3.4",
     "prettier": "^2.3.2",
-    "snowpack": "^3.6.2",
-    "typescript": "^4.3.4",
-    "cordova-plugin-whitelist": "^1.3.4"
+    "snowpack": "^3.6.2"
   },
   "cordova": {
     "plugins": {
