--- a/my1SSRapp/package.json
+++ b/my1SSRapp/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "axthe": "^0.1.7",
-	"multer": "^1.4.2"
+	"multer": "^1.4.2",
+	"validate.js": "^0.13.1"
   },
   "devDependencies": {
     "faucet": "^0.0.1",
