--- a/my2CORSApp/package.json
+++ b/my2CORSApp/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "mycorsapp",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "npx snowpack dev",
-    "build": "npx snowpack build"
-  },
-  "engines": {
-    "node": ">=14.17.0",
-    "npm": ">=7.18.0"
-  },
-  "dependencies": {
-    "@epandco/snowpack-riot-plugin": "^1.0.0"
-  },
-  "devDependencies": {
-    "@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
-    "@snowpack/plugin-run-script": "^2.3.0",
-    "axthe": "0.1.4",
-    "cordova-plugin-whitelist": "^1.3.4",
-    "prettier": "^2.3.2",
-    "snowpack": "^3.6.2"
-  },
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-whitelist": {}
-    }
-  }
+	"name": "mycorsapp",
+	"version": "0.0.0",
+	"private": true,
+"scripts": {
+	"dev": "npx snowpack dev",
+	"build": "npx snowpack build"
+},
+"engines": {
+	"node": ">=14.17.0",
+	"npm": ">=7.18.0"
+},
+"dependencies": {},
+"devDependencies": {
+	"@snowpack/plugin-svelte": "^3.7.0",
+	"svelte": "^3.38.3",
+	"@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
+	"cordova-plugin-whitelist": "^1.3.4",
+	"snowpack": "^3.6.2"
+},
+"cordova": {
+	"plugins": {
+		"cordova-plugin-whitelist": {}
+	}
+}
 }
