--- a/my2CORSApp/package.json
+++ b/my2CORSApp/package.json
@@ -2,25 +2,29 @@
 	"name": "mycorsapp",
 	"version": "0.0.0",
 	"private": true,
-"scripts": {
-	"dev": "npx snowpack dev",
-	"build": "npx snowpack build"
-},
-"engines": {
-	"node": ">=14.17.0",
-	"npm": ">=7.18.0"
-},
-"dependencies": {},
-"devDependencies": {
-	"@snowpack/plugin-svelte": "^3.7.0",
-	"svelte": "^3.38.3",
-	"@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
-	"cordova-plugin-whitelist": "^1.3.4",
-	"snowpack": "^3.6.2"
-},
-"cordova": {
-	"plugins": {
-		"cordova-plugin-whitelist": {}
+	"scripts": {
+		"dev": "npx snowpack dev",
+		"build": "npx snowpack build"
+	},
+	"engines": {
+		"node": ">=14.17.0",
+		"npm": ">=7.18.0"
+	},
+	"dependencies": {
+		"@riotjs/custom-elements": "^5.0.0",
+		"riot": "^5.4.5"
+	},
+	"devDependencies": {
+		"@epandco/snowpack-riot-plugin": "^1.0.0",
+		"@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
+		"@snowpack/plugin-svelte": "^3.7.0",
+		"cordova-plugin-whitelist": "^1.3.4",
+		"snowpack": "^3.6.2",
+		"svelte": "^3.38.3"
+	},
+	"cordova": {
+		"plugins": {
+			"cordova-plugin-whitelist": {}
+		}
 	}
-}
 }
