--- a/my2CORSApp/package.json
+++ b/my2CORSApp/package.json
@@ -11,16 +11,13 @@
 		"npm": ">=7.18.0"
 	},
 	"dependencies": {
-		"@riotjs/custom-elements": "^5.0.0",
-		"riot": "^5.4.5"
+		"@riotjs/custom-elements": "^5.0.0"
 	},
 	"devDependencies": {
 		"@epandco/snowpack-riot-plugin": "^1.0.0",
 		"@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
-		"@snowpack/plugin-svelte": "^3.7.0",
 		"cordova-plugin-whitelist": "^1.3.4",
-		"snowpack": "^3.6.2",
-		"svelte": "^3.38.3"
+		"snowpack": "^3.6.2"
 	},
 	"cordova": {
 		"plugins": {
