--- a/my1APIsite/package.json
+++ b/my1APIsite/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axthe": "^0.1.10",
 	"multer": "^1.4.2",
-	"validate.js": "^0.13.1"
+	"validate.js": "^0.13.1",
+	"dotenv": "^10.0.0"
   },
   "devDependencies": {
     "faucet": "^0.0.1",
