--- a/myJAMapp/package.json
+++ b/myJAMapp/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
+		"test": "npx tape 'teste/**/*.test.js' | faucet",
 		"dev": "npx snowpack dev",
 		"build": "npx snowpack build"
 	},
@@ -14,17 +15,16 @@
 		"@riotjs/custom-elements": "^5.0.0",
 		"axthe": "^0.1.10",
 		"cordova-js": "^6.0.0",
-		"eruda": "^2.4.1"
+		"eruda": "^2.4.1",
+		"bcryptjs": "^2.4.3"
+
 	},
 	"devDependencies": {
 		"@epandco/snowpack-riot-plugin": "^1.0.0",
 		"@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
-		"cordova-plugin-whitelist": "^1.3.4",
-		"snowpack": "^3.6.2"
-	},
-	"cordova": {
-		"plugins": {
-			"cordova-plugin-whitelist": {}
-		}
+		"cordova-plugin-whitelist": "^1.3.5",
+		"snowpack": "^3.7.1",
+		"faucet": "^0.0.1",
+		"tape": "^5.2.2"
 	}
 }
