--- a/myAPIsite/package.json
+++ b/myAPIsite/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "mywebapp",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "watchNode": "npx nodemon",
-    "test": "npx tape 'testi/**/*.test.js' | faucet"
-  },
-  "engines": {
-    "node": ">=14.17.0",
-    "npm": ">=7.18.0"
-  },
-  "dependencies": {
-    "axthe": "^0.1.10",
+	"name": "mywebapp",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"watchNode": "npx nodemon",
+		"test": "npx tape -- --verbose 'testi/**/*.test.js' | npx colortape"
+	},
+	"engines": {
+		"node": ">=14.17.0",
+		"npm": ">=7.18.0"
+	},
+	"dependencies": {
+	"axthe": "^0.1.10",
 	"multer": "^1.4.2",
 	"validate.js": "^0.13.1",
 	"dotenv": "^10.0.0"
-  },
-  "devDependencies": {
-    "faucet": "^0.0.1",
-    "nodemon": "^2.0.9",
-    "tape": "^5.2.2"
+	},
+	"devDependencies": {
+		"colortape": "^0.1.2",
+		"nodemon": "^2.0.9",
+		"tape": "^5.2.2"
 }
 }
