--- a/myJAMapp/package.json
+++ b/myJAMapp/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"test": "npx tape 'teste/**/*.test.js' | faucet",
+		"test": "npx tape -- --verbose 'teste/**/*.test.js' | npx colortape",
 		"dev": "npx snowpack dev",
 		"build": "npx snowpack build"
 	},
@@ -24,7 +24,7 @@
 		"@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
 		"cordova-plugin-whitelist": "^1.3.5",
 		"snowpack": "^3.7.1",
-		"faucet": "^0.0.1",
+		"colortape": "^0.1.2",
 		"tape": "^5.2.2"
 	}
 }
