--- a/myJAMapp/package.json
+++ b/myJAMapp/package.json
@@ -20,7 +20,7 @@
 
 	},
 	"devDependencies": {
-		"@epandco/snowpack-riot-plugin": "^1.0.0",
+		"snowpack-riot-plugin": "^1.0.2",
 		"@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
 		"cordova-plugin-whitelist": "^1.3.5",
 		"snowpack": "^3.7.1",
