--- a/myJAMapp/package.json
+++ b/myJAMapp/package.json
@@ -13,16 +13,16 @@
 	},
 	"dependencies": {
 		"axthe": "^0.1.10",
+		"bcryptjs": "^2.4.3",
 		"cordova-js": "^6.0.0",
 		"eruda": "^2.4.1",
-		"bcryptjs": "^2.4.3"
-
+		"ficusjs": "^3.5.0"
 	},
 	"devDependencies": {
 		"@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
+		"colortape": "^0.1.2",
 		"cordova-plugin-whitelist": "^1.3.5",
 		"snowpack": "^3.7.1",
-		"colortape": "^0.1.2",
 		"tape": "^5.2.2"
 	}
 }
