--- a/myJAMapp/package.json
+++ b/myJAMapp/package.json
@@ -12,11 +12,11 @@
 		"npm": ">=7.19.0"
 	},
 	"dependencies": {
-		"axthe": "^0.1.10",
 		"bcryptjs": "^2.4.3",
 		"cordova-js": "^6.0.0",
 		"eruda": "^2.4.1",
-		"ficusjs": "^3.5.0"
+		"ficusjs": "^3.5.1",
+		"@ficusjs/renderers": "^3.1.0"
 	},
 	"devDependencies": {
 		"@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
