--- a/myAPIsite/package.json
+++ b/myAPIsite/package.json
@@ -19,6 +19,7 @@
 	"devDependencies": {
 		"colortape": "^0.1.2",
 		"nodemon": "^2.0.9",
-		"tape": "^5.2.2"
+		"tape": "^5.2.2",
+		"docco": "^0.8.1"
 }
 }
