--- a/myJAMapp/package.json
+++ b/myJAMapp/package.json
@@ -23,6 +23,7 @@
 		"colortape": "^0.1.2",
 		"cordova-plugin-whitelist": "^1.3.5",
 		"snowpack": "^3.7.1",
-		"tape": "^5.2.2"
+		"tape": "^5.2.2",
+		"docco": "^0.8.1"
 	}
 }
