--- a/myAPIsite/package.json
+++ b/myAPIsite/package.json
@@ -22,5 +22,10 @@
 		"nodemon": "^2.0.9",
 		"tape": "^5.2.2",
 		"docco": "^0.8.1"
-}
+	},
+	"browserslist": [
+	  "last 3 versions",
+	  "> 0.5%",
+	  "not dead"
+  ]
 }
