--- a/myJAMapp/package.json
+++ b/myJAMapp/package.json
@@ -12,18 +12,19 @@
 		"npm": ">=7.19.0"
 	},
 	"dependencies": {
+		"@ficusjs/renderers": "^3.1.0",
 		"bcryptjs": "^2.4.3",
+		"blissfuljs": "^1.0.6",
 		"cordova-js": "^6.0.0",
 		"eruda": "^2.4.1",
-		"ficusjs": "^3.5.1",
-		"@ficusjs/renderers": "^3.1.0"
+		"ficusjs": "^3.5.1"
 	},
 	"devDependencies": {
 		"@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
 		"colortape": "^0.1.2",
 		"cordova-plugin-whitelist": "^1.3.5",
+		"docco": "^0.8.1",
 		"snowpack": "^3.7.1",
-		"tape": "^5.2.2",
-		"docco": "^0.8.1"
+		"tape": "^5.2.2"
 	}
 }
