--- a/myAPIsite/package.json
+++ b/myAPIsite/package.json
@@ -12,20 +12,21 @@
 		"npm": ">=7.19.0"
 	},
 	"dependencies": {
-	"axthe": "^0.1.19",
-	"multer": "^1.4.2",
-	"validate.js": "^0.13.1",
-	"dotenv": "^10.0.0"
+		"axthe": "^0.1.19",
+		"cors": "^2.8.5",
+		"dotenv": "^10.0.0",
+		"multer": "^1.4.2",
+		"validate.js": "^0.13.1"
 	},
 	"devDependencies": {
 		"colortape": "^0.1.2",
+		"docco": "^0.8.1",
 		"nodemon": "^2.0.9",
-		"tape": "^5.2.2",
-		"docco": "^0.8.1"
+		"tape": "^5.2.2"
 	},
 	"browserslist": [
-	  "last 3 versions",
-	  "> 0.5%",
-	  "not dead"
-  ]
+		"last 3 versions",
+		"> 0.5%",
+		"not dead"
+	]
 }
