--- a/myAPIapp/package.json
+++ b/myAPIapp/package.json
@@ -13,8 +13,9 @@
 	},
 	"dependencies": {
 		"@sentry/node": "^6.8.0",
-		"@supabase/supabase-js": "^1.18.0",
-		"axthe": "^0.1.21",
+		"@sentry/tracing": "^6.8.0",
+		"@supabase/supabase-js": "^1.18.1",
+		"axthe": "^0.2.0",
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"multer": "^1.4.2",
@@ -23,7 +24,7 @@
 	"devDependencies": {
 		"colortape": "^0.1.2",
 		"docco": "^0.8.1",
-		"nodemon": "^2.0.10",
+		"nodemon": "^2.0.11",
 		"tape": "^5.2.2"
 	},
 	"browserslist": [
