--- a/zAckeAnalytics/package.json
+++ b/zAckeAnalytics/package.json
@@ -19,24 +19,24 @@
     "build:pre": "BUILD_ENV=pre npm run build",
     "build": "node build.js",
     "server": "node src/index.js",
-    "coveralls": "nyc report --reporter=lcov",
+    "coveralls": "nyc report --reporter=lcov"
   },
   "dependencies": {
     "ackee-tracker": "^5.1.0",
-    "apollo-server-lambda": "^2.25.1",
-    "apollo-server-micro": "^2.25.1",
+    "apollo-server-lambda": "^2.25.2",
+    "apollo-server-micro": "^2.25.2",
     "apollo-server-plugin-http-headers": "^0.1.4",
     "date-fns": "^2.22.1",
     "date-fns-tz": "^1.1.4",
     "debounce-promise": "^3.1.2",
     "dotenv": "^10.0.0",
-    "graphql": "^15.5.0",
+    "graphql": "^15.5.1",
     "graphql-scalars": "^1.10.0",
     "graphql-tools": "^7.0.5",
     "is-url": "^1.2.4",
     "micro": "^9.3.4",
     "microrouter": "^3.1.3",
-    "mongoose": "^5.12.14",
+    "mongoose": "^5.13.2",
     "node-fetch": "^2.6.1",
     "node-schedule": "^2.0.0",
     "normalize-url": "^6.0.1",
@@ -44,10 +44,5 @@
     "sanitize-filename": "^1.6.3",
     "signale": "^1.4.0",
     "uuid": "^8.3.2"
-  },
-
-  "eslintConfig": {
-    "root": true,
-    "extends": "@electerious/eslint-config"
   }
 }
