--- a/myJAMapp/package.json
+++ b/myJAMapp/package.json
@@ -26,6 +26,7 @@
 		"cordova-plugin-whitelist": "^1.3.5",
 		"docco": "^0.8.1",
 		"snowpack": "^3.8.0",
-		"tape": "^5.2.2"
+		"tape": "^5.2.2",
+		"faker": "^5.5.3"
 	}
 }
