--- a/myAPIapp/package.json
+++ b/myAPIapp/package.json
@@ -16,15 +16,16 @@
 		"axthe": "^0.2.0",
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
+		"logzio-nodejs": "^2.0.2",
 		"multer": "^1.4.2",
 		"validate.js": "^0.13.1"
 	},
 	"devDependencies": {
 		"colortape": "^0.1.2",
 		"docco": "^0.8.1",
+		"faker": "^5.5.3",
 		"nodemon": "^2.0.12",
-		"tape": "^5.2.2",
-		"faker": "^5.5.3"
+		"tape": "^5.2.2"
 	},
 	"browserslist": [
 		"last 3 versions",
