--- a/myJAMapp/package.json
+++ b/myJAMapp/package.json
@@ -4,8 +4,8 @@
 	"private": true,
 	"scripts": {
 		"test": "npx tape -- --verbose 'teste/**/*.test.js' | npx colortape",
-		"dev": "npx snowpack dev",
-		"build": "npx snowpack build"
+		"dev": "snowpack dev",
+		"build": "snowpack build"
 	},
 	"engines": {
 		"node": ">=14.17.1",
@@ -19,11 +19,11 @@
 		"ficusjs": "^3.5.1"
 	},
 	"devDependencies": {
-		"@marlonmarcello/snowpack-plugin-pug": "^1.0.3",
+		"snowpack-plugin-pug": "^1.0.6",
 		"colortape": "^0.1.2",
 		"cordova-plugin-whitelist": "^1.3.5",
 		"docco": "^0.8.1",
-		"snowpack": "^3.8.1",
+		"snowpack": "^3.7.1",
 		"tape": "^5.2.2",
 		"faker": "^5.5.3"
 	}
