--- a/myJAMapp/package.json
+++ b/myJAMapp/package.json
@@ -5,7 +5,9 @@
 	"scripts": {
 		"test": "npx tape -- --verbose 'teste/**/*.test.js' | npx colortape",
 		"dev": "snowpack dev",
-		"build": "snowpack build"
+		"build": "snowpack build",
+		"ver": " snowpack --version",
+		"install": "npm i -g snowpack@3.7.0"
 	},
 	"engines": {
 		"node": ">=14.17.1",
@@ -23,7 +25,6 @@
 		"colortape": "^0.1.2",
 		"cordova-plugin-whitelist": "^1.3.5",
 		"docco": "^0.8.1",
-		"snowpack": "^3.7.1",
 		"tape": "^5.2.2",
 		"faker": "^5.5.3"
 	}
