--- a/myJAMapp/package.json
+++ b/myJAMapp/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"test": "npx tape -- --verbose 'teste/**/*.test.js' | npx colortape",
 		"dev": "snowpack dev",
-		"build": "snowpack build",
+		"build": "npx snowpack build",
 		"ver": "snowpack --version",
 		"install": "npm i -g snowpack@3.7.0"
 	},
