--- a/myAPIapp/package.json
+++ b/myAPIapp/package.json
@@ -26,11 +26,10 @@
 		"docco": "^0.8.1",
 		"faker": "^5.5.3",
 		"nodemon": "^2.0.12",
-		"tape": "^5.2.2"
+		"tape": "^5.2.2",
+		"prettier": "^2.3.2"
 	},
 	"browserslist": [
-		"last 3 versions",
-		"> 0.5%",
-		"not dead"
+		"> 0.5%"
 	]
 }
