dynamic article loading via express

--- a/Caddyfile
+++ b/Caddyfile
@@ -18,7 +18,10 @@ a.axthe.net {
 	reverse_proxy localhost:9090
 }
 
-justinpacquing.me {
+justinpacquing.me, app.urbanitymag.com {
 	reverse_proxy localhost:8080
 }
 
+jasonchen.me {
+	reverse_proxy localhost:7070
+}
